Place ships randomly and do necessary adjustments

--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,6 @@
 		<title>Battleship</title>
 	</head>
 	<body>
-		<h1>let's go</h1>
 		<form action="" class="player-form">
 			<div class="p1-name">
 				<label for="input-player-1-name">Player 1</label>
@@ -29,6 +28,7 @@
 			</div>
 			<button type="submit" class="start-game">Start game</button>
 		</form>
-		<div class="gameboards"></div>
+		<div class="gameboards">
+		</div>
 	</body>
 </html>
