Play with computer

--- a/src/template.html
+++ b/src/template.html
@@ -30,7 +30,7 @@
 				</div>
 				<button type="submit" class="start-game">Start game</button>
 			</form>
-			<h1 class="turn"></h1>
+			<h1 class="turn-display">i show the turns</h1>
 		</div>
 		<div class="gameboards"></div>
 	</body>
